<resources>
    <string name="app_name">Stormy</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="unavailable_network_text">Network is unavailable!</string>
    <string name="time_text">At 5 O\'clock is will be</string>
    <string name="location_text">Corby, UK</string>
    <string name="humidity_text">HUMIDITY</string>
    <string name="perspiration_text">Big percent</string>
    <string name="stormy_text">Getting current weather...</string>
    <string name="precip_text">PRECIPITATION CHANCE</string>
    <string name="hourly_text">Hourly Forecast</string>
    <string name="daily_text">Daily Forecast</string>
    <string name="nothing_text">Nothing to display</string>
    <string name="daily_label">Daily Forecast</string>
    <string name="this_week">This Week`s Forecast</string>
</resources>
